<package>
  <name>gridmap_2d</name>
  <version>0.4.1</version>
  <description>

     gridmap_2d - a simple 2D gridmap structure, based on OpenCV's cv::Mat

  </description>
  <author>Armin Hornung</author>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <maintainer email="aravindadp@gmail.com">Pramuditha Aravinda</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/gridmap_2d</url>

  <build_depend>rosconsole</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
